<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_gravity="top"
                android:src="@drawable/hyperbaric_chamber" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/test1"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio1a"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio1bAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio1bAnswer"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio1c"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/test2"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/radio2aAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio2aAnswer"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio2b"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio2c"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/test3"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio3a"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio3b"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio3cAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio3cAnswer"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/test4"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio4a"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio4bAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio4bAnswer"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio4c"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/test5"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/radio5aAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio5aAnswer"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio5b"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio5c"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/test6"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio6a"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio6b"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio6cAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio6cAnswer"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/test7"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkbox7aAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/checkbox7aAnswer"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/checkbox7b"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox7cAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/checkbox7cAnswer"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox7dAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/checkbox7dAnswer"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/test8"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/test8Answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/typeAnswer"
                android:inputType="textCapWords"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/test9"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/checkbox9a"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox9bAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/checkbox9bAnswer"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/checkbox9c"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkbox9dAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/checkbox9dAnswer"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:text="@string/test10"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/test10Answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:hint="@string/typeAnswer"
                android:inputType="textCapWords"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="onSubmit"
                    android:text="@string/submit"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="170dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="onReset"
                    android:text="@string/reset"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>